--- a/main.ipynb
+++ b/main.ipynb
@@ -2,19 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "6c89cfe1-6927-44c6-8e2d-373f3f5bcc63",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCancer_dataset1.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(df)\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       id outcome  time  mean_radius  mean_texture  mean_perimeter  mean_area  \\\n",
+      "0  119513       N    31        18.02         27.60          117.50     1013.0   \n",
+      "1    8423       N    61        17.99         10.38          122.80     1001.0   \n",
+      "2  842517       N   116        21.37         17.44          137.50     1373.0   \n",
+      "3  843483       N   123        11.42         20.38           77.58      386.1   \n",
+      "4  843584       R    27        20.29         14.34          135.10     1297.0   \n",
+      "\n",
+      "   mean_smoothness  mean_compactness  mean_concavity  ...  worst_perimeter  \\\n",
+      "0          0.09489            0.1036          0.1086  ...           139.70   \n",
+      "1          0.11840            0.2776          0.3001  ...           184.60   \n",
+      "2          0.08836            0.1189          0.1255  ...           159.10   \n",
+      "3          0.14250            0.2839          0.2414  ...            98.87   \n",
+      "4          0.10030            0.1328          0.1980  ...           152.20   \n",
+      "\n",
+      "   worst_area  worst_smoothness  worst_compactness  worst_concavity  \\\n",
+      "0      1436.0            0.1195             0.1926           0.3140   \n",
+      "1      2019.0            0.1622             0.6656           0.7119   \n",
+      "2      1949.0            0.1188             0.3449           0.3414   \n",
+      "3       567.7            0.2098             0.8663           0.6869   \n",
+      "4      1575.0            0.1374             0.2050           0.4000   \n",
+      "\n",
+      "   worst_concave_points  worst_symmetry  worst_fractal_dimension  tumor_size  \\\n",
+      "0                0.1170          0.2677                  0.08113         5.0   \n",
+      "1                0.2654          0.4601                  0.11890         3.0   \n",
+      "2                0.2032          0.4334                  0.09067         2.5   \n",
+      "3                0.2575          0.6638                  0.17300         2.0   \n",
+      "4                0.1625          0.2364                  0.07678         3.5   \n",
+      "\n",
+      "   lymph_node_status  \n",
+      "0                5.0  \n",
+      "1                2.0  \n",
+      "2                0.0  \n",
+      "3                0.0  \n",
+      "4                0.0  \n",
+      "\n",
+      "[5 rows x 35 columns]\n"
      ]
     }
    ],
@@ -22,21 +53,36 @@
     "import pandas as pd\n",
     "\n",
     "df = pd.read_csv('Cancer_dataset1.csv')\n",
-    "print(df)"
+    "print(df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "727ccc66-8e48-43e1-9df4-d492cf7e6ed8",
+   "execution_count": 5,
+   "id": "129b20f8-093e-4d07-a1d2-9002078a1879",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    N\n",
+      "1    N\n",
+      "2    N\n",
+      "3    N\n",
+      "4    R\n",
+      "Name: outcome, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['outcome'].head())\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -50,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
