--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 423,
    "id": "6c89cfe1-6927-44c6-8e2d-373f3f5bcc63",
    "metadata": {},
    "outputs": [
@@ -216,6 +216,7 @@
     "from decimal import Decimal\n",
     "import random\n",
     "import numpy as np\n",
+    "import math\n",
     "\n",
     "df = pd.read_csv('Cancer_dataset1.csv')\n",
     "\n",
@@ -225,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 424,
    "id": "8678835d",
    "metadata": {},
    "outputs": [
@@ -420,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 425,
    "id": "3879b861",
    "metadata": {},
    "outputs": [
@@ -452,7 +453,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 426,
+   "id": "9dfb77d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Question 1C)\n",
+    "df['outcome'].replace('N', 0, inplace=True) \n",
+    "df['outcome'].replace('R', 1, inplace=True) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 427,
    "id": "2e1e8a90",
    "metadata": {},
    "outputs": [
@@ -473,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 428,
    "id": "3df45305",
    "metadata": {},
    "outputs": [],
@@ -534,7 +547,7 @@
     "\n",
     "    def getOutputs(self, data):\n",
     "        if data != None:\n",
-    "            output = [x[1] for x in data]\n",
+    "            output = [Decimal(x[1]) for x in data]\n",
     "            return output\n",
     "\n",
     "    def performLinearRegression(self):\n",
@@ -548,8 +561,10 @@
     "\n",
     "            for idx, i in enumerate(x):\n",
     "                y += (Decimal(thetas[idx + 1]) * Decimal(i))\n",
+    "\n",
+    "            Y = Decimal(1/(1+(Decimal('%.5f'%(math.exp(-y))))))\n",
     "            \n",
-    "            predictedOutputs.append(y)\n",
+    "            predictedOutputs.append(Y)\n",
     "\n",
     "        return predictedOutputs\n",
     "    \n",
@@ -612,23 +627,41 @@
     "        self.printResults()\n",
     "\n",
     "    \n",
+    "    def calculateModelPerformance(self, predictedOutputs, data):\n",
+    "        outputs = self.getOutputs(data)\n",
+    "       \n",
+    "        accuratePredictionCount = 0\n",
+    "        count = 0\n",
+    "\n",
+    "        for idx, x in enumerate(predictedOutputs):\n",
+    "            print(x)\n",
+    "            roundedOpt = None\n",
+    "            count += 1\n",
+    "            if x > 0.7:   #Setting the threshold value at 0.5\n",
+    "                roundedOpt = 1\n",
+    "            else:\n",
+    "                roundedOpt = 0\n",
+    "\n",
+    "            if roundedOpt == outputs[idx]:\n",
+    "                accuratePredictionCount += 1\n",
+    "            \n",
+    "\n",
+    "        return (accuratePredictionCount / count)\n",
+    "\n",
     "    def printResults(self):\n",
     "        print(\"The values of the Thetas/ Weights are\")\n",
     "        print(self.thetas)\n",
     "\n",
-    "        print(\"Mean Square Error of the Training data set is\")\n",
+    "        print(\"Model performance of the Training data set is\")\n",
     "        predictedOutputs = self.computePredictedOutput(self.thetas, self.trainingData)\n",
-    "        cost = self.calculateCost(predictedOutputs, self.trainingData)\n",
-    "        print(cost)\n",
+    "        performancePercent = self.calculateModelPerformance(predictedOutputs, self.trainingData)\n",
     "\n",
-    "        self.calculateMeanSqErr()\n",
+    "        print(performancePercent)\n",
     "\n",
-    "\n",
-    "    def calculateMeanSqErr(self):\n",
-    "        print(\"Mean Square Error of the Test data set is\")\n",
-    "        predictedOutputs = self.computePredictedOutput(self.thetas, self.testData)\n",
-    "        cost = self.calculateCost(predictedOutputs, self.testData)\n",
-    "        print(cost)\n",
+    "        print(\"Model performance of the Test data is\")\n",
+    "        predictedOutputs1 = self.computePredictedOutput(self.thetas, self.testData)\n",
+    "        performancePercent1 = self.calculateModelPerformance(predictedOutputs1, self.testData)\n",
+    "        print(performancePercent1)\n",
     "\n",
     "\n",
     "\n",
@@ -637,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 429,
    "id": "5ccbd89f",
    "metadata": {},
    "outputs": [],
@@ -651,22 +684,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 430,
    "id": "ff0d2bb3",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'decimal.Decimal' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[86], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m lr1 \u001b[38;5;241m=\u001b[39m LogisticRegression(finalTrain, finalTest, [\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m], \u001b[38;5;241m0.001\u001b[39m, \u001b[38;5;28;01mFalse\u001b[39;00m) \u001b[38;5;66m# passing in Training data, Test data, max no of iteration, starting theta values,\u001b[39m\n\u001b[1;32m      6\u001b[0m                                                                   \u001b[38;5;66m# the learning date and regularization\u001b[39m\n\u001b[0;32m----> 7\u001b[0m \u001b[43mlr1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mperformLinearRegression\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[84], line 60\u001b[0m, in \u001b[0;36mLogisticRegression.performLinearRegression\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     59\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mperformLinearRegression\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m---> 60\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43miterate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[84], line 125\u001b[0m, in \u001b[0;36mLogisticRegression.iterate\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    123\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m idx, b \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mthetas):\n\u001b[1;32m    124\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m idx \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m--> 125\u001b[0m         newB \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcalculateGradientDescent\u001b[49m\u001b[43m(\u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43midx\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpredictedOutputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m    126\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    127\u001b[0m         newB \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcalculateGradientDescent(b, (idx \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m), predictedOutputs, \u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "Cell \u001b[0;32mIn[84], line 100\u001b[0m, in \u001b[0;36mLogisticRegression.calculateGradientDescent\u001b[0;34m(self, B, index, predictedOutputs, isIntercept)\u001b[0m\n\u001b[1;32m     97\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m idx, x \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(features):\n\u001b[1;32m     99\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m isIntercept:\n\u001b[0;32m--> 100\u001b[0m         result \u001b[38;5;241m=\u001b[39m (\u001b[43mpredictedOutputs\u001b[49m\u001b[43m[\u001b[49m\u001b[43midx\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43moutputs\u001b[49m\u001b[43m[\u001b[49m\u001b[43midx\u001b[49m\u001b[43m]\u001b[49m)\n\u001b[1;32m    101\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    102\u001b[0m         result \u001b[38;5;241m=\u001b[39m (predictedOutputs[idx] \u001b[38;5;241m-\u001b[39m outputs[idx]) \u001b[38;5;241m*\u001b[39m Decimal(x[index]) \n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'decimal.Decimal' and 'str'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The values of the Thetas/ Weights are\n",
+      "[Decimal('-0.0001718076446254189412739667829'), Decimal('0.01262092408169723918060540714')]\n",
+      "Model performance of the Training data set is\n",
+      "1\n",
+      "1\n",
+      "0.9924080782017565622984171091\n",
+      "1\n",
+      "0.9993204620857816684654434984\n",
+      "0.9975460367495959938551164136\n",
+      "0.9999600015999360025598976041\n",
+      "0.9999500024998750062496875156\n",
+      "0.9999500024998750062496875156\n",
+      "0.9997600575861793169639286571\n",
+      "0.9999600015999360025598976041\n",
+      "0.9998600195972563841062251285\n",
+      "0.9999900000999990000099999000\n",
+      "0.9999900000999990000099999000\n",
+      "0.9997100840756180707594797509\n",
+      "1\n",
+      "0.9999000099990000999900009999\n",
+      "0.9999900000999990000099999000\n",
+      "0.9999900000999990000099999000\n",
+      "1\n",
+      "0.9999600015999360025598976041\n",
+      "0.9996601155607093588180018794\n",
+      "0.9998500224966255061740738889\n",
+      "0.9908347783007183552142680208\n",
+      "1\n",
+      "0.9987814865863646351451229500\n",
+      "0.9988313673002586973241307670\n",
+      "0.9998800143982722073351197856\n",
+      "0.9997500624843789052736815796\n",
+      "0.9997100840756180707594797509\n",
+      "0.9981633793819372354867044638\n",
+      "0.9997800483893543420447501550\n",
+      "0.9999900000999990000099999000\n",
+      "1\n",
+      "0.9997000899730080975707287814\n",
+      "0.9987615356957372857656505933\n",
+      "0.9998200323941690495710772061\n",
+      "0.9999500024998750062496875156\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "0.9999600015999360025598976041\n",
+      "1\n",
+      "0.9983228176663205814232090089\n",
+      "0.9998100360931423029624371369\n",
+      "0.9999700008999730008099757007\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "0.9999900000999990000099999000\n",
+      "0.9992006394884092725819344524\n",
+      "0.9999100080992710656040956314\n",
+      "1\n",
+      "1\n",
+      "0.9999400035997840129592224467\n",
+      "0.9998700168978032855728755262\n",
+      "0.9995502024089159878054875306\n",
+      "0.9994103478947421021597257618\n",
+      "1\n",
+      "1\n",
+      "0.9999900000999990000099999000\n",
+      "0.9995502024089159878054875306\n",
+      "1\n",
+      "1\n",
+      "0.9982530571499875218367856252\n",
+      "0.9999900000999990000099999000\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "0.9999900000999990000099999000\n",
+      "1\n",
+      "0.9995002498750624687656171914\n",
+      "1\n",
+      "0.9998800143982722073351197856\n",
+      "0.9999400035997840129592224467\n",
+      "0.9999200063994880409567234621\n",
+      "1\n",
+      "0.9999900000999990000099999000\n",
+      "0.9999300048996570240083194176\n",
+      "0.9999900000999990000099999000\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "0.9999600015999360025598976041\n",
+      "0.9956787542067427365234880618\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "0.9999900000999990000099999000\n",
+      "1\n",
+      "0.9999300048996570240083194176\n",
+      "1\n",
+      "0.9998800143982722073351197856\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "0.9997700528878357977665137018\n",
+      "1\n",
+      "0.9998900120986691463938966714\n",
+      "0.9999900000999990000099999000\n",
+      "1\n",
+      "1\n",
+      "0.9994802702594650781593571343\n",
+      "0.9999900000999990000099999000\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "0.9999700008999730008099757007\n",
+      "1\n",
+      "0.9999800003999920001599968001\n",
+      "1\n",
+      "1\n",
+      "0.9994602914426209846682791293\n",
+      "1\n",
+      "0.9999000099990000999900009999\n",
+      "0.9998600195972563841062251285\n",
+      "1\n",
+      "1\n",
+      "0.9998800143982722073351197856\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "0.9999800003999920001599968001\n",
+      "0.9994602914426209846682791293\n",
+      "0.9999900000999990000099999000\n",
+      "1\n",
+      "0.9999400035997840129592224467\n",
+      "0.9999400035997840129592224467\n",
+      "1\n",
+      "1\n",
+      "0.9992405771613573684000159878\n",
+      "1\n",
+      "1\n",
+      "0.9979641531276196559019600016\n",
+      "1\n",
+      "1\n",
+      "0.9997500624843789052736815796\n",
+      "1\n",
+      "0.9999900000999990000099999000\n",
+      "0.22602739726027396\n",
+      "Model performance of the Test data is\n",
+      "1\n",
+      "0.9985820135407721036128697250\n",
+      "1\n",
+      "0.9961647656522388803108034069\n",
+      "0.9991407389644905381372020063\n",
+      "0.9991806718490837513239143902\n",
+      "0.9989710598083973507287493881\n",
+      "1\n",
+      "1\n",
+      "0.9993703966501104304288298372\n",
+      "1\n",
+      "1\n",
+      "0.9998600195972563841062251285\n",
+      "0.9996601155607093588180018794\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "0.9997900440907409444016756481\n",
+      "1\n",
+      "0.9998800143982722073351197856\n",
+      "0.9999700008999730008099757007\n",
+      "0.9999900000999990000099999000\n",
+      "0.9999700008999730008099757007\n",
+      "1\n",
+      "0.9896874567011737693236475921\n",
+      "1\n",
+      "1\n",
+      "0.9999600015999360025598976041\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "0.9999300048996570240083194176\n",
+      "1\n",
+      "0.9999100080992710656040956314\n",
+      "0.9999900000999990000099999000\n",
+      "0.2222222222222222\n"
      ]
     }
    ],
@@ -675,7 +888,7 @@
     "finalTrain = dm.reqColsFromData(['mean_area'], train)\n",
     "finalTest = dm.reqColsFromData(['mean_area'], test)\n",
     "\n",
-    "lr1 = LogisticRegression(finalTrain, finalTest, [0, 0], 0.001, False) # passing in Training data, Test data, max no of iteration, starting theta values,\n",
+    "lr1 = LogisticRegression(finalTrain, finalTest, [0, 0], 0.0001, False) # passing in Training data, Test data, max no of iteration, starting theta values,\n",
     "                                                                  # the learning date and regularization\n",
     "lr1.performLinearRegression()\n"
    ]
