Logistic regression testing done

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 3385,
    "id": "6c89cfe1-6927-44c6-8e2d-373f3f5bcc63",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 3386,
    "id": "8678835d",
    "metadata": {},
    "outputs": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 3387,
    "id": "3879b861",
    "metadata": {},
    "outputs": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 3388,
    "id": "9dfb77d1",
    "metadata": {},
    "outputs": [],
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 3389,
    "id": "2e1e8a90",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 3390,
    "id": "3df45305",
    "metadata": {},
    "outputs": [],
@@ -530,7 +530,7 @@
     "    \n",
     "    trainingData = None\n",
     "    testData = None\n",
-    "    maxNoOfIterations = 50\n",
+    "    maxNoOfIterations = 1000\n",
     "\n",
     "    def __init__(self, trainingData, testData, thetas, lr, isRegularization):\n",
     "        self.trainingData = trainingData\n",
@@ -550,7 +550,7 @@
     "            output = [Decimal(x[1]) for x in data]\n",
     "            return output\n",
     "\n",
-    "    def performLinearRegression(self):\n",
+    "    def performLogisticRegression(self):\n",
     "        self.iterate()\n",
     "\n",
     "    def computePredictedOutput(self, thetas, data):\n",
@@ -562,8 +562,8 @@
     "            for idx, i in enumerate(x):\n",
     "                y += (Decimal(thetas[idx + 1]) * Decimal(i))\n",
     "\n",
-    "            Y = Decimal(1/(1+(Decimal('%.5f'%(math.exp(-y))))))\n",
     "            \n",
+    "            Y = Decimal(1 / (1 + np.exp(-y) ))\n",
     "            predictedOutputs.append(Y)\n",
     "\n",
     "        return predictedOutputs\n",
@@ -605,7 +605,7 @@
     "        \n",
     "        change = (Decimal(self.lr) * total) / dataLen\n",
     "\n",
-    "        newB = B - change\n",
+    "        newB = Decimal(B) - change\n",
     "\n",
     "        \n",
     "        return newB\n",
@@ -627,41 +627,51 @@
     "        self.printResults()\n",
     "\n",
     "    \n",
-    "    def calculateModelPerformance(self, predictedOutputs, data):\n",
+    "    def calculateF1Score(self, predictedOutputs, data):\n",
     "        outputs = self.getOutputs(data)\n",
     "       \n",
-    "        accuratePredictionCount = 0\n",
-    "        count = 0\n",
+    "        roundedPredictedOutputs = []\n",
     "\n",
     "        for idx, x in enumerate(predictedOutputs):\n",
     "            print(x)\n",
-    "            roundedOpt = None\n",
-    "            count += 1\n",
-    "            if x > 0.7:   #Setting the threshold value at 0.5\n",
-    "                roundedOpt = 1\n",
+    "            if x > 0.5:   #Setting the threshold value at 0.5\n",
+    "                roundedPredictedOutputs.append(1)\n",
     "            else:\n",
-    "                roundedOpt = 0\n",
+    "                roundedPredictedOutputs.append(0)\n",
     "\n",
-    "            if roundedOpt == outputs[idx]:\n",
-    "                accuratePredictionCount += 1\n",
+    "        TP = 0\n",
+    "        FP = 0\n",
+    "        FN = 0\n",
+    "\n",
+    "        for idx, x in enumerate(roundedPredictedOutputs):\n",
+    "            if x == outputs[idx]:\n",
+    "                TP += 1\n",
+    "            elif outputs[idx] == 1 and x == 0:\n",
+    "                FN += 1\n",
+    "            elif outputs[idx] == 0 and x == 1:\n",
+    "                FP += 1\n",
+    "        \n",
+    "        precision = TP/(TP + FP)\n",
+    "        recall = TP/(TP + FN)\n",
+    "\n",
+    "        f1 = 2 * (precision * recall) / (precision + recall)\n",
     "            \n",
     "\n",
-    "        return (accuratePredictionCount / count)\n",
+    "        return f1\n",
     "\n",
     "    def printResults(self):\n",
     "        print(\"The values of the Thetas/ Weights are\")\n",
     "        print(self.thetas)\n",
     "\n",
-    "        print(\"Model performance of the Training data set is\")\n",
+    "        print(\"F1 Score of the Training data is\")\n",
     "        predictedOutputs = self.computePredictedOutput(self.thetas, self.trainingData)\n",
-    "        performancePercent = self.calculateModelPerformance(predictedOutputs, self.trainingData)\n",
+    "        F1Score = self.calculateF1Score(predictedOutputs, self.trainingData)\n",
+    "        print(F1Score)\n",
     "\n",
-    "        print(performancePercent)\n",
-    "\n",
-    "        print(\"Model performance of the Test data is\")\n",
-    "        predictedOutputs1 = self.computePredictedOutput(self.thetas, self.testData)\n",
-    "        performancePercent1 = self.calculateModelPerformance(predictedOutputs1, self.testData)\n",
-    "        print(performancePercent1)\n",
+    "        print(\"F1 Score of the Test data is\")\n",
+    "        predictedOutputs = self.computePredictedOutput(self.thetas, self.testData)\n",
+    "        F1Score = self.calculateF1Score(predictedOutputs, self.testData)\n",
+    "        print(F1Score)\n",
     "\n",
     "\n",
     "\n",
@@ -670,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 3391,
    "id": "5ccbd89f",
    "metadata": {},
    "outputs": [],
@@ -684,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": null,
    "id": "ff0d2bb3",
    "metadata": {},
    "outputs": [
@@ -693,204 +703,35 @@
      "output_type": "stream",
      "text": [
       "The values of the Thetas/ Weights are\n",
-      "[Decimal('-0.0001718076446254189412739667829'), Decimal('0.01262092408169723918060540714')]\n",
-      "Model performance of the Training data set is\n",
-      "1\n",
-      "1\n",
-      "0.9924080782017565622984171091\n",
-      "1\n",
-      "0.9993204620857816684654434984\n",
-      "0.9975460367495959938551164136\n",
-      "0.9999600015999360025598976041\n",
-      "0.9999500024998750062496875156\n",
-      "0.9999500024998750062496875156\n",
-      "0.9997600575861793169639286571\n",
-      "0.9999600015999360025598976041\n",
-      "0.9998600195972563841062251285\n",
-      "0.9999900000999990000099999000\n",
-      "0.9999900000999990000099999000\n",
-      "0.9997100840756180707594797509\n",
-      "1\n",
-      "0.9999000099990000999900009999\n",
-      "0.9999900000999990000099999000\n",
-      "0.9999900000999990000099999000\n",
-      "1\n",
-      "0.9999600015999360025598976041\n",
-      "0.9996601155607093588180018794\n",
-      "0.9998500224966255061740738889\n",
-      "0.9908347783007183552142680208\n",
-      "1\n",
-      "0.9987814865863646351451229500\n",
-      "0.9988313673002586973241307670\n",
-      "0.9998800143982722073351197856\n",
-      "0.9997500624843789052736815796\n",
-      "0.9997100840756180707594797509\n",
-      "0.9981633793819372354867044638\n",
-      "0.9997800483893543420447501550\n",
-      "0.9999900000999990000099999000\n",
-      "1\n",
-      "0.9997000899730080975707287814\n",
-      "0.9987615356957372857656505933\n",
-      "0.9998200323941690495710772061\n",
-      "0.9999500024998750062496875156\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "0.9999600015999360025598976041\n",
-      "1\n",
-      "0.9983228176663205814232090089\n",
-      "0.9998100360931423029624371369\n",
-      "0.9999700008999730008099757007\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "0.9999900000999990000099999000\n",
-      "0.9992006394884092725819344524\n",
-      "0.9999100080992710656040956314\n",
-      "1\n",
-      "1\n",
-      "0.9999400035997840129592224467\n",
-      "0.9998700168978032855728755262\n",
-      "0.9995502024089159878054875306\n",
-      "0.9994103478947421021597257618\n",
-      "1\n",
-      "1\n",
-      "0.9999900000999990000099999000\n",
-      "0.9995502024089159878054875306\n",
-      "1\n",
-      "1\n",
-      "0.9982530571499875218367856252\n",
-      "0.9999900000999990000099999000\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "0.9999900000999990000099999000\n",
-      "1\n",
-      "0.9995002498750624687656171914\n",
-      "1\n",
-      "0.9998800143982722073351197856\n",
-      "0.9999400035997840129592224467\n",
-      "0.9999200063994880409567234621\n",
-      "1\n",
-      "0.9999900000999990000099999000\n",
-      "0.9999300048996570240083194176\n",
-      "0.9999900000999990000099999000\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "0.9999600015999360025598976041\n",
-      "0.9956787542067427365234880618\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "0.9999900000999990000099999000\n",
-      "1\n",
-      "0.9999300048996570240083194176\n",
-      "1\n",
-      "0.9998800143982722073351197856\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "0.9997700528878357977665137018\n",
-      "1\n",
-      "0.9998900120986691463938966714\n",
-      "0.9999900000999990000099999000\n",
-      "1\n",
-      "1\n",
-      "0.9994802702594650781593571343\n",
-      "0.9999900000999990000099999000\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "0.9999700008999730008099757007\n",
-      "1\n",
-      "0.9999800003999920001599968001\n",
-      "1\n",
-      "1\n",
-      "0.9994602914426209846682791293\n",
-      "1\n",
-      "0.9999000099990000999900009999\n",
-      "0.9998600195972563841062251285\n",
-      "1\n",
-      "1\n",
-      "0.9998800143982722073351197856\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "0.9999800003999920001599968001\n",
-      "0.9994602914426209846682791293\n",
-      "0.9999900000999990000099999000\n",
-      "1\n",
-      "0.9999400035997840129592224467\n",
-      "0.9999400035997840129592224467\n",
-      "1\n",
-      "1\n",
-      "0.9992405771613573684000159878\n",
-      "1\n",
-      "1\n",
-      "0.9979641531276196559019600016\n",
-      "1\n",
-      "1\n",
-      "0.9997500624843789052736815796\n",
-      "1\n",
-      "0.9999900000999990000099999000\n",
-      "0.22602739726027396\n",
-      "Model performance of the Test data is\n",
-      "1\n",
-      "0.9985820135407721036128697250\n",
-      "1\n",
-      "0.9961647656522388803108034069\n",
-      "0.9991407389644905381372020063\n",
-      "0.9991806718490837513239143902\n",
-      "0.9989710598083973507287493881\n",
-      "1\n",
-      "1\n",
-      "0.9993703966501104304288298372\n",
-      "1\n",
-      "1\n",
-      "0.9998600195972563841062251285\n",
-      "0.9996601155607093588180018794\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "0.9997900440907409444016756481\n",
-      "1\n",
-      "0.9998800143982722073351197856\n",
-      "0.9999700008999730008099757007\n",
-      "0.9999900000999990000099999000\n",
-      "0.9999700008999730008099757007\n",
-      "1\n",
-      "0.9896874567011737693236475921\n",
-      "1\n",
-      "1\n",
-      "0.9999600015999360025598976041\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "0.9999300048996570240083194176\n",
-      "1\n",
-      "0.9999100080992710656040956314\n",
-      "0.9999900000999990000099999000\n",
-      "0.2222222222222222\n"
+      "[Decimal('-3.765766255061421869849032265'), Decimal('0.2260550047673299467845994119')]\n",
+      "F1 Score of the Training data is\n",
+      "0.02820320088061537816896027632\n",
+      "0.03510565954462213338107976451\n",
+      "0.04362159872150807902533739270\n",
+      "0.9949153625190333919227484302\n",
+      "0.9994672811953652732955436138\n",
+      "0.9999444145798127643581968014\n",
+      "0.9999942025354128558389201048\n",
+      "0.9999993953612900697947708798\n",
+      "0.9999999369403187188412613976\n",
+      "1.0\n",
+      "F1 Score of the Test data is\n",
+      "0.03510565954462213338107976451\n",
+      "0.8682540448369880025639241709\n",
+      "0.9989509482010669838023002613\n",
+      "1.0\n"
      ]
     }
    ],
    "source": [
     "# Logistic regression\n",
-    "finalTrain = dm.reqColsFromData(['mean_area'], train)\n",
-    "finalTest = dm.reqColsFromData(['mean_area'], test)\n",
+    "finalTrain = dm.reqColsFromData(['mean_texture'], train)\n",
+    "finalTest = dm.reqColsFromData(['mean_texture'], test)\n",
     "\n",
-    "lr1 = LogisticRegression(finalTrain, finalTest, [0, 0], 0.0001, False) # passing in Training data, Test data, max no of iteration, starting theta values,\n",
+    "\n",
+    "lr1 = LogisticRegression(finalTrain, finalTest, [0.1, 0.2], 0.1, False) # passing in Training data, Test data, max no of iteration, starting theta values,\n",
     "                                                                  # the learning date and regularization\n",
-    "lr1.performLinearRegression()\n"
+    "lr1.performLogisticRegression()\n"
    ]
   }
  ],
