--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2827,
+   "execution_count": 3533,
    "id": "6c89cfe1-6927-44c6-8e2d-373f3f5bcc63",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2828,
+   "execution_count": 3534,
    "id": "8678835d",
    "metadata": {},
    "outputs": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2829,
+   "execution_count": 3535,
    "id": "3879b861",
    "metadata": {},
    "outputs": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2830,
+   "execution_count": 3536,
    "id": "9dfb77d1",
    "metadata": {},
    "outputs": [],
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2831,
+   "execution_count": 3537,
    "id": "2e1e8a90",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2832,
+   "execution_count": null,
    "id": "3df45305",
    "metadata": {},
    "outputs": [],
@@ -503,21 +503,24 @@
     "\n",
     "\n",
     "    def divideData(self):\n",
+    "\n",
+    "        # Using stratification to balance the data in the training and the test data set.\n",
     "        \n",
     "        df_negative = self.df[self.df['outcome'] == 0]\n",
     "        df_positive = self.df[self.df['outcome'] == 1]\n",
     "        \n",
     "        \n",
-    "        print(len(df_positive))\n",
     "        print(len(df_negative))\n",
+    "        print(len(df_positive))\n",
     "\n",
-    "        df_positive_train = df_positive.sample(n=30)\n",
-    "        df_negative_train = df_negative.sample(n=45)\n",
+    "        df_negative_train = df_negative.sample(n=50) # taking 50 samples from negative class for training for stratification\n",
+    "        df_positive_train = df_positive.sample(n=35) # taking 35 samples from the positive class for training for stratification\n",
+    "        \n",
     "\n",
-    "        df_positive_test =  df_positive[~df_positive.apply(tuple, axis=1).isin(df_positive_train.apply(tuple, axis=1))]\n",
     "        df_negative_test =  df_negative[~df_negative.apply(tuple, axis=1).isin(df_negative_train.apply(tuple, axis=1))]\n",
+    "        df_positive_test =  df_positive[~df_positive.apply(tuple, axis=1).isin(df_positive_train.apply(tuple, axis=1))]\n",
     "\n",
-    "        df_negative_test_final = df_negative_test\n",
+    "        df_negative_test_final = df_negative_test.sample(n=8) # taking 8 samples from the positive class for test for stratification \n",
     "        \n",
     "        train = pd.concat([df_positive_train, df_negative_train], ignore_index=True)\n",
     "        test = pd.concat([df_positive_test, df_negative_test_final], ignore_index=True)\n",
@@ -676,7 +679,6 @@
     "        roundedPredictedOutputs = []\n",
     "\n",
     "        for idx, x in enumerate(predictedOutputs):\n",
-    "            # print(x)\n",
     "                \n",
     "            if x > threshold:  \n",
     "                roundedPredictedOutputs.append(1)\n",
@@ -686,6 +688,8 @@
     "        TP = 0\n",
     "        FP = 0\n",
     "        FN = 0\n",
+    "\n",
+    "        print(f\"The \")\n",
     "\n",
     "        for idx, x in enumerate(roundedPredictedOutputs):\n",
     "            if outputs[idx] == 1 and x == 1:\n",
@@ -729,17 +733,9 @@
     "        cost = self.calculateCost(predictedOutputs, self.testData)\n",
     "        print(f\"Cost of the Test data is: {cost}\")\n",
     "\n",
-    "        F1Scores = []\n",
     "        \n",
-    "        x = 0.0 \n",
-    "\n",
-    "        while x <= 1.0: \n",
-    "            F1Score = self.calculateF1Score(predictedOutputs, self.testData, x)\n",
-    "            F1Scores.append(F1Score)\n",
-    "            x += 0.01\n",
-    "\n",
-    "        \n",
-    "        print(f\"F1 Score of the Test data is: {max(F1Scores)}\")\n",
+    "        f1score = self.calculateF1Score(predictedOutputs, self.testData, 0.45)\n",
+    "        print(f\"The f1score is : {f1score}\")\n",
     "\n",
     "\n",
     "\n",
@@ -748,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2833,
+   "execution_count": 3539,
    "id": "5ccbd89f",
    "metadata": {},
    "outputs": [
@@ -756,8 +752,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "41\n",
-      "141\n"
+      "141\n",
+      "41\n"
      ]
     }
    ],
@@ -772,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2834,
+   "execution_count": 3540,
    "id": "33e9abfe",
    "metadata": {},
    "outputs": [
@@ -781,17 +777,18 @@
      "output_type": "stream",
      "text": [
       "The values of the Thetas/ Weights are\n",
-      "[Decimal('-4.508912280751136847891779196'), Decimal('0.3291721141121106947903630725')]\n",
-      "Cost of the Test data is: 0.01934377809694068996287184508\n",
-      "F1 Score of the Test data is: 1.0\n"
+      "[Decimal('-4.368102192596630329232767816'), Decimal('0.2990470197906772179096476186')]\n",
+      "Cost of the Test data is: 0.01374084880361386823760637468\n",
+      "The f1score is : 1.0\n"
      ]
     }
    ],
    "source": [
     "\n",
     "# This is not in our assignment. Just checking if the actual Logistic regression code works or not\n",
-    "finalTrain = [([1], 0), ([2], 0), ([3], 0), ([30], 1), ([40], 1)]\n",
-    "finalTest = [([5], 0), ([6], 0), ([33], 1)]\n",
+    "finalTrain = [([1], 0), ([2], 0), ([3], 0), ([4], 0), ([30], 1), ([40], 1), ([50], 1), ([60], 1)]\n",
+    "\n",
+    "finalTest = [([70], 1), ([5], 0), ([6], 0), ([2.5], 0), ([0], 0), ([1.3], 0), ([3.5], 0)]\n",
     "\n",
     "lr = LogisticRegression(finalTrain, finalTest, [0.1, 0.2], 0.1, False) # passing in Training data, Test data, max no of iteration, starting theta values,\n",
     "                                                                  # the learning date and regularization\n",
@@ -800,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2835,
+   "execution_count": 3541,
    "id": "ff0d2bb3",
    "metadata": {},
    "outputs": [
@@ -809,9 +806,9 @@
      "output_type": "stream",
      "text": [
       "The values of the Thetas/ Weights are\n",
-      "[Decimal('-0.04802394213606418836945919764'), Decimal('0.1255288610942279178031770783')]\n",
-      "Cost of the Test data is: 0.3231264932918825807263091171\n",
-      "F1 Score of the Test data is: 0.26666666666666666\n"
+      "[Decimal('-0.5553183839738671079474369119'), Decimal('0.1711625176612601121703319314')]\n",
+      "Cost of the Test data is: 0.2879355437696036155289133405\n",
+      "The f1score is : 0.4\n"
      ]
     }
    ],
@@ -823,7 +820,7 @@
     "finalTrain = dm.performZScoreScaling(tempTrain)\n",
     "finalTest = dm.performZScoreScaling(tempTest)\n",
     "\n",
-    "lr = LogisticRegression(finalTrain, finalTest, [0.1, 0.2], 0.001, False) # passing in Training data, Test data, max no of iteration, starting theta values,\n",
+    "lr = LogisticRegression(finalTrain, finalTest, [0.1, 0.2], 0.1, False) # passing in Training data, Test data, max no of iteration, starting theta values,\n",
     "                                                                  # the learning date and regularization\n",
     "lr.performLogisticRegression()\n",
     "\n",
@@ -832,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2836,
+   "execution_count": 3542,
    "id": "b87584c6",
    "metadata": {},
    "outputs": [
@@ -841,9 +838,9 @@
      "output_type": "stream",
      "text": [
       "The values of the Thetas/ Weights are\n",
-      "[Decimal('0.07057415214457046654567957106'), Decimal('0.1631049059133037738551635488'), Decimal('0.05271143760644077297543619181'), Decimal('0.06240886680904255709100738532'), Decimal('-0.02828337851677861539950082450'), Decimal('0.1967906774791265714897500324'), Decimal('0.09467768887063126549873264950'), Decimal('0.2959663881100900100198324596'), Decimal('-0.001540714259179559075214687996'), Decimal('0.09718466694207287821741923205'), Decimal('0.1762356260314592143861989501'), Decimal('0.2804939612969181384741059209'), Decimal('-0.02068496689771336243432538078')]\n",
-      "Cost of the Test data is: 0.4833304238749106629568724210\n",
-      "F1 Score of the Test data is: 0.23529411764705885\n"
+      "[Decimal('-0.1971406057056817058097281273'), Decimal('-0.3096386434547396329679464212'), Decimal('-0.3400657314775427784165679963'), Decimal('-0.1599714693234976406289731671'), Decimal('0.7287755823994215763859589434'), Decimal('0.2758278813932275003748928777'), Decimal('-0.1824824671600028417916824940'), Decimal('-0.3386403169654677769929882379'), Decimal('-0.1079436024398823559346926476'), Decimal('0.9832335335242528049358490172'), Decimal('-0.1080879120859512144847558179'), Decimal('-0.2222780805158437463580328880'), Decimal('0.2656301064489918928877077657')]\n",
+      "Cost of the Test data is: 0.2923558719235205035773676029\n",
+      "The f1score is : 0.625\n"
      ]
     }
    ],
@@ -879,7 +876,7 @@
     "finalTrain = dm.performZScoreScaling(tempTrain)\n",
     "finalTest = dm.performZScoreScaling(tempTest)\n",
     "\n",
-    "lr = LogisticRegression(finalTrain, finalTest, [0.1, 0.2, 0.1, 0.1, 0.0, 0.2, 0.1, 0.3, 0.0, 0.1, 0.2, 0.3, 0.0], 0.0001, False) \n",
+    "lr = LogisticRegression(finalTrain, finalTest, [0.1, 0.2, 0.1, 0.1, 0.0, 0.2, 0.1, 0.3, 0.0, 0.1, 0.2, 0.3, 0.0], 0.1, False) \n",
     "lr.performLogisticRegression() \n"
    ]
   },
